fix nav spacing

--- a/_scss/_nav.scss
+++ b/_scss/_nav.scss
@@ -12,6 +12,10 @@
   & > * {
     display: flex;
   }
+  h1 {
+    @extend .p;
+    margin-bottom: 0;
+  }
 }
 
 .nav-avatar {
